--- a/templates/create_client.html
+++ b/templates/create_client.html
@@ -1,9 +1,12 @@
-<!-- create_client.html -->
+<!-- Load bootstrap  -->
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
+
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <title>Create Client</title>
 </head>
 <body>
@@ -12,93 +15,15 @@
         <div class="col-8">
           <h1 class="mt-2">Create Client</h1>
           <hr class="mt-0 mb-4">
-          <form method="post" class="needs-validation" novalidate>
+          <form method="post" class="needs-validation" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
-            <!-- {{ form }} -->
-            <div class="col-md-4 mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" required>
-                <div class="invalid-feedback">
-                  Field required*
-                </div>
-              </div>
-              <div class="mb-3">
-                <label for="formFile" class="form-label">Profile Image</label>
-                <input class="form-control" type="file" id="formFile" required>
-                <div class="invalid-feedback">
-                    Field required*
-                  </div>
-              </div>
-              <label for="Gender" class="form-label">Gender </label>
-              <select class="form-select mb-3" aria-label="Default select example">
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-                <option value="Other">Other</option>
-              </select>
-              <div class="col-md-4 mb-3">
-                <label for="phone" class="form-label">Phone</label>
-                <input type="text" class="form-control" id="phone" required>
-                <div class="invalid-feedback">
-                  Field required*
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" required>
-                <div class="invalid-feedback">
-                  Please enter valid email*
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="nationality" class="form-label">Nationality</label>
-                <input type="text" class="form-control" id="nationality" required>
-                <div class="invalid-feedback">
-                  Field required*
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="dateofbirth" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dateofbirth" required>
-                <div class="invalid-feedback">
-                  Field required*
-                </div>
-              </div>
-              <div class="form-floating mb-3">
-                <textarea class="form-control" placeholder="Leave a comment here" id="education_background" style="height: 100px"></textarea>
-                <label for="education_background" style="font-size: 13px;">Education Background</label>
-              </div>
-              <label for="preferred_mode_of_contact" class="form-label">Preferred mode of contact</label>
-              <select class="form-select mb-3" aria-label="Default select example">
-                <option value="Phone">Phone</option>
-                <option value="Email">Email</option>
-                <option value="None">None</option>
-              </select>
+          {% bootstrap_form form %}
+            {% buttons%}
             <button type="submit" class="btn btn-success">Save</button>
+            {% endbuttons%}
           </form>
         </div>
       </div>
     </div>
   </body>
 </html>
-
-<script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-(() => {
-  'use strict'
-
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  const forms = document.querySelectorAll('.needs-validation')
-
-  // Loop over them and prevent submission
-  Array.from(forms).forEach(form => {
-    form.addEventListener('submit', event => {
-      if (!form.checkValidity()) {
-        event.preventDefault()
-        event.stopPropagation()
-      }
-
-      form.classList.add('was-validated')
-    }, false)
-  })
-})()
-</script>
