--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,35 @@
 <html>
 <head>
     <title>Login</title>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
 </head>
 <body>
-    <h1>Login</h1>
-    <!-- Add your login form here -->
+    <div class="container">
+        <h1>Login</h1>
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            {% bootstrap_messages %}
+
+
+                <div class="alert-danger">
+                    <strong>{{error_message}}</strong> 
+                </div>
+
+
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" name="username" id="username" class="form-control" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" name="password" id="password" class="form-control" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+    {% bootstrap_javascript %}
 </body>
 </html>
